// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get status info returns correct response with empty non obfuscated variable 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_integration_path_depth",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": 1,
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "********",
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Get status info returns correct response with empty pre shared secret 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_integration_path_depth",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": 1,
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": false,
      "isSet": false,
      "resolvedBy": null,
      "value": null,
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Get status info returns correct status info 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_integration_path_depth",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": 1,
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isForV3Only": false,
      "isInternal": false,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "********",
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isForV3Only": true,
      "isInternal": false,
      "isOptional": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isForV3Only": false,
      "isInternal": true,
      "isOptional": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Handle status returns correct status info in html if all variables are set 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
         .env-info {
            display: flex;
            flex-direction: column;
          }
          
          body {
            display: flex;
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
          
          .v3-icon {
            font-size: 10px;
            color: #999;
          }
          
          .items {
            display: flex;
            flex-direction: column;
            align-content: baseline;
            gap: 2rem;
            flex-wrap: wrap;
          }
          
          .item {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: 1rem;
          }
          
          .item h3, p {
            margin: 0;
          }
          
          ul {
            margin: 0;
          }
          
          [data-tooltip] {
            position: relative;
            border-bottom: 1px dashed #000;
            cursor: help
          }
          
          [data-tooltip]::after {
            position: absolute;
            opacity: 0;
            pointer-events: none;
            content: attr(data-tooltip);
            left: 0;
            top: calc(100% + 10px);
            border-radius: 3px;
            box-shadow: 0 0 5px 2px rgba(100, 100, 100, 0.6);
            background-color: white;
            z-index: 10;
            padding: 8px;
            width: 300px;
            transform: translateY(-20px);
            transition: all 150ms cubic-bezier(.25, .8, .25, 1);
          }
          
          [data-tooltip]:hover::after {
            opacity: 1;
            transform: translateY(0);
            transition-duration: 300ms;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div class="items">
            <div class="item">
              <h3>Lambda function version</h3> 
              <p>__lambda_func_version__</p>
              
          </div>
            <div class="item">
              <h3>Variables</h3> 
              <p>✅ All required environment variables are set:</p>
              <ul class="env-info">
        <li>
        <strong>fpjs_integration_path_depth</strong> - Value is set
    </li><li>
        <strong>fpjs_pre_shared_secret</strong> - Value is set
    </li><li>
        <strong>fpjs_get_result_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - Value is set
    </li><li>
        <strong>fpjs_agent_download_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - Value is set
    </li>
      </ul>
          </div>
        </div>
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;

exports[`Handle status returns correct status info in html if some variables are missing 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
         .env-info {
            display: flex;
            flex-direction: column;
          }
          
          body {
            display: flex;
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
          
          .v3-icon {
            font-size: 10px;
            color: #999;
          }
          
          .items {
            display: flex;
            flex-direction: column;
            align-content: baseline;
            gap: 2rem;
            flex-wrap: wrap;
          }
          
          .item {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: 1rem;
          }
          
          .item h3, p {
            margin: 0;
          }
          
          ul {
            margin: 0;
          }
          
          [data-tooltip] {
            position: relative;
            border-bottom: 1px dashed #000;
            cursor: help
          }
          
          [data-tooltip]::after {
            position: absolute;
            opacity: 0;
            pointer-events: none;
            content: attr(data-tooltip);
            left: 0;
            top: calc(100% + 10px);
            border-radius: 3px;
            box-shadow: 0 0 5px 2px rgba(100, 100, 100, 0.6);
            background-color: white;
            z-index: 10;
            padding: 8px;
            width: 300px;
            transform: translateY(-20px);
            transition: all 150ms cubic-bezier(.25, .8, .25, 1);
          }
          
          [data-tooltip]:hover::after {
            opacity: 1;
            transform: translateY(0);
            transition-duration: 300ms;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div class="items">
            <div class="item">
              <h3>Lambda function version</h3> 
              <p>__lambda_func_version__</p>
              
          </div>
            <div class="item">
              <h3>Variables</h3> 
              <p>🚨 Some required environment variables are not set:</p>
              <ul class="env-info">
        <li>
        <strong>fpjs_integration_path_depth</strong> - Value is set
    </li><li>
        <strong>fpjs_pre_shared_secret</strong> - ⚠️ Value is not defined 
    </li><li>
        <strong>fpjs_get_result_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - Value is set
    </li><li>
        <strong>fpjs_agent_download_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - Value is set
    </li>
      </ul>
          </div>
        </div>
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;

exports[`Handle status returns correct status info in html if some variables are using default values 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
         .env-info {
            display: flex;
            flex-direction: column;
          }
          
          body {
            display: flex;
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
          
          .v3-icon {
            font-size: 10px;
            color: #999;
          }
          
          .items {
            display: flex;
            flex-direction: column;
            align-content: baseline;
            gap: 2rem;
            flex-wrap: wrap;
          }
          
          .item {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: 1rem;
          }
          
          .item h3, p {
            margin: 0;
          }
          
          ul {
            margin: 0;
          }
          
          [data-tooltip] {
            position: relative;
            border-bottom: 1px dashed #000;
            cursor: help
          }
          
          [data-tooltip]::after {
            position: absolute;
            opacity: 0;
            pointer-events: none;
            content: attr(data-tooltip);
            left: 0;
            top: calc(100% + 10px);
            border-radius: 3px;
            box-shadow: 0 0 5px 2px rgba(100, 100, 100, 0.6);
            background-color: white;
            z-index: 10;
            padding: 8px;
            width: 300px;
            transform: translateY(-20px);
            transition: all 150ms cubic-bezier(.25, .8, .25, 1);
          }
          
          [data-tooltip]:hover::after {
            opacity: 1;
            transform: translateY(0);
            transition-duration: 300ms;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div class="items">
            <div class="item">
              <h3>Lambda function version</h3> 
              <p>__lambda_func_version__</p>
              
          </div>
            <div class="item">
              <h3>Variables</h3> 
              <p>🚨 Some required environment variables are not set:</p>
              <ul class="env-info">
        <li>
        <strong>fpjs_integration_path_depth</strong> - Value is set
    </li><li>
        <strong>fpjs_pre_shared_secret</strong> - ⚠️ Value is not defined 
    </li><li>
        <strong>fpjs_get_result_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - ⚠️ Value is not defined 
    </li><li>
        <strong>fpjs_agent_download_path <span data-tooltip="This variable is relevant only for V3 version of the JS Agent and can be ignored in later versions." class="v3-icon">V3 only</span></strong> - ⚠️ Value is not defined 
    </li>
      </ul>
          </div>
        </div>
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;
